--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "author": "Andrea Parodi <andrea@parro.it>",
   "scripts": {
-    "test": "ava --no-babel && xo",
-    "cover-test": "nyc ava --no-babel"
+    "test": "ava && xo",
+    "cover-test": "nyc ava && xo"
   },
   "keywords": [
     "iterable",
@@ -21,7 +21,7 @@
     "lookahead"
   ],
   "engines": {
-    "node": ">=4"
+    "node": ">=6"
   },
   "devDependencies": {
     "ava": "^0.20.0",
